third_party/move/move-compiler-v2/tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_type_con.exp

Diagnostics:
error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
  ┌─ tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_type_con.move:7:9
  │
7 │     fun f<T>() {
  │         ^
  │
  = `f<T>` calls `g<M::S<T>>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_type_con.move:8
  = `g<M::S<T>>` calls `f<M::S<T>>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_type_con.move:12

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_type_con.move:11:9
   │
11 │     fun g<T>() {
   │         ^
   │
   = `g<T>` calls `f<T>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_type_con.move:12
   = `f<T>` calls `g<M::S<T>>` at tests/cyclic-instantiation-checker/v1-tests/mutually_recursive_type_con.move:8
